tests/incremental_path/incremental_path.exp

Should resolve to dir/node_modules/b.js which is number
Error: dir/a.js:2
  2: (require('b'): boolean);
      ^^^^^^^^^^^^ number. This type is incompatible with
  2: (require('b'): boolean);
                    ^^^^^^^ boolean


Found 1 error

Should resolve to node_modules/b.js which is a string
Error: dir/a.js:2
  2: (require('b'): boolean);
      ^^^^^^^^^^^^ string. This type is incompatible with
  2: (require('b'): boolean);
                    ^^^^^^^ boolean


Found 1 error

Should resolve to dir/node_modules/b.js which is number
Error: dir/a.js:2
  2: (require('b'): boolean);
      ^^^^^^^^^^^^ number. This type is incompatible with
  2: (require('b'): boolean);
                    ^^^^^^^ boolean


Found 1 error
